--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,12 @@
       <h1><a href="">헤리미의 블로그</a></h1>
     </div>
 
-    <div>
-      <p>published: 2018년 7월 21일, 오후 12시 16분</p>
-      <h2><a href=""> 헤리미의 첫번째 포스트</a></h2>
-      <p>오는길에 110번 버스 타고 와서 던킨 바바리안 도너츠와 커피를 마셨다</p>
-    </div>
-
-    <div>
-      <p>pulbished: 2018년 7월 21일, 오후 12시 17분</p>
-      <h2><a href=""> 헤리미의 두번째 포스트</a></h2>
-      <p>그리고 꼬북칩을 먹었지</p>
-    </div>
+    {% for post in posts %}
+      <div>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+      </div>
+    {% endfor %}
   </body>
 </html>
